cmake_minimum_required(VERSION 3.28)
project(Chapter03)

add_executable(first_name.out first_name.cpp)
add_executable(name_age.out name_age.cpp)
add_executable(exercise_operators.out exercise_operators.cpp)
add_executable(compare_names.out compare_names.cpp)
add_executable(repeated_word.out repeated_word.cpp)
add_executable(find_repeated_words.out find_repeated_words.cpp)