cmake_minimum_required(VERSION 3.28)
project(Chapter04)

add_executable(if_statement.out if_statement.cpp)
add_executable(convert_length.out convert_length.cpp)
add_executable(convert_length_switch.out convert_length_switch.cpp)
add_executable(while_loop.out while_loop.cpp)
add_executable(mean_median_temps.out mean_median_temps.cpp)